mobile fix
fixed top image having too large of a width on moible

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -46,9 +46,7 @@ body{
   background-image: url(../img/compsetup2.jpg);
   background-size: cover;
   height: 100%;
-  width: 100%;
   position: absolute;
-  min-width: 900px;
   background-attachment: fixed;
   background-position: 0 50%;
 }
